--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,14 @@ jobs:
       - name: Run Unit Tests
         run: npx jest --coverage --passWithNoTests      
         working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+      
 
       - name: Build Project
         run: npx next build
         working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        env: 
+          CONTENTFUL_SPACE_ID: ${{secrets.CONTENTFUL_SPACE_ID}}
+          CONTENTFUL_ACCESS_TOKEN: ${{secrets.CONTENTFUL_ACCESS_TOKEN}}
 
   deploy:
     runs-on: ubuntu-latest
