--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,9 @@ jobs:
       - name: Build Project
         run: npx next build
         working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        env: 
+          CONTENTFUL_SPACE_ID: ${{secrets.CONTENTFUL_SPACE_ID}}
+          CONTENTFUL_ACCESS_TOKEN: ${{secrets.CONTENTFUL_ACCESS_TOKEN}}
       
       - name: Deploy Vercel
         run: npx vercel --prod --token ${{secrets.TOKEN_VERCEL}}
