--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
           CONTENTFUL_ACCESS_TOKEN: ${{secrets.CONTENTFUL_ACCESS_TOKEN}}
       
       - name: Deploy Vercel
-        run: npx vercel --prod --token ${{secrets.TOKEN_VERCEL}}
+        run: npx vercel --prod --token ${{secrets.VERCEL_TOKEN}}
         env:
           VERCEL_ORG_ID: ${{secrets.VERCEL_ORG_ID}}
           VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
