--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
         run: npx vercel --prod --token ${{secrets.VERCEL_TOKEN}}
         env:
           VERCEL_ORG_ID: ${{secrets.VERCEL_ORG_ID}}
-          VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
+          VERCEL_PROJECT_ID: 'prj_jqwCcT3NhdhmqMI5djJx9zEUerHS'
         working-directory: miniprojetoantoniosousa
 
 
