--- a/miniprojetoantoniosousa/.github/workflows/main.yml
+++ b/miniprojetoantoniosousa/.github/workflows/main.yml
@@ -21,9 +21,10 @@ jobs:
         with:
           node-version: '21'
 
+
       - name: Install dependencies
         run: npm install
-        working-directory: miniprojetoantoniosousa
+        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
