--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,32 +21,31 @@ jobs:
         with:
           node-version: '21'
 
-
       - name: Install dependencies
         run: npm install
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        working-directory: miniprojeto/miniprojetoantoniosousa  # Atualiza para o caminho correto
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        working-directory: miniprojeto/miniprojetoantoniosousa
 
       - name: Check code formatting
         run: npx prettier --check .
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        working-directory: miniprojeto/miniprojetoantoniosousa
 
       - name: Run Unit Tests
-        run: npx jest --coverage --passWithNoTests      
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
-      
+        run: npx jest --coverage --passWithNoTests
+        working-directory: miniprojeto/miniprojetoantoniosousa
 
       - name: Build Project
         run: npx next build
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        working-directory: miniprojeto/miniprojetoantoniosousa
         env: 
-          CONTENTFUL_SPACE_ID: ${{secrets.CONTENTFUL_SPACE_ID}}
-          CONTENTFUL_ACCESS_TOKEN: ${{secrets.CONTENTFUL_ACCESS_TOKEN}}
+          CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
 
   deploy:
+    needs: build  # Garantir que o job de build conclua antes do deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -58,37 +57,13 @@ jobs:
         with:
           node-version: '21'
 
-      - name: Change directory
-        run: cd miniprojetoantoniosousa
-
       - name: Install dependencies
         run: npm install
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
+        working-directory: miniprojeto/miniprojetoantoniosousa
 
-      - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
-
-      - name: Check code formatting
-        run: npx prettier --check .
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
-
-      - name: Run Unit Tests
-        run: npx jest --coverage --passWithNoTests      
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
-
-      - name: Build Project
-        run: npx next build
-        env: 
-          CONTENTFUL_SPACE_ID: ${{secrets.CONTENTFUL_SPACE_ID}}
-          CONTENTFUL_ACCESS_TOKEN: ${{secrets.CONTENTFUL_ACCESS_TOKEN}}
-        working-directory: miniprojetoantoniosousa  # Adiciona esta linha
-      
-      - name: Deploy Vercel
-        run: npx vercel --prod --token ${{secrets.VERCEL_TOKEN}}
+      - name: Deploy to Vercel
+        run: npx vercel --prod --token 'prj_jqwCcT3NhdhmqMI5djJx9zEUerHS'
         env:
-          VERCEL_ORG_ID: ${{secrets.VERCEL_ORG_ID}}
-          VERCEL_PROJECT_ID: 'prj_jqwCcT3NhdhmqMI5djJx9zEUerHS'
-        working-directory: miniprojetoantoniosousa
-
-
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        working-directory: miniprojeto/miniprojetoantoniosousa
