--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
 
   deploy:
-    needs: build  # Garantir que o job de build conclua antes do deploy
+    needs: build  # Garantir que job de build conclua antes do deploy
     runs-on: ubuntu-latest
 
     steps:
