--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: miniprojeto/miniprojetoantoniosousa
+        working-directory: miniprojetoantoniosousa
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
-        working-directory: miniprojeto/miniprojetoantoniosousa
+        working-directory: miniprojetoantoniosousa
 
       - name: Check code formatting
         run: npx prettier --check .
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build Project
         run: npx next build
-        working-directory: miniprojeto/miniprojetoantoniosousa
+        working-directory: miniprojeto/miniprojetoantoniosousa 
         env: 
           CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
           CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
