--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ build:
   script:
     - echo "Check out e configuração do Node.js"
     - cd miniprojetoantoniosousa  # Navega para o diretório do projeto
-    - npm install  # Instala as dependências no diretório específico
+    - npm install  # Instala as dependências do projeto
+    - npm install --save-dev typescript @types/react @types/node  # Instala dependências de TypeScript
     - npx prettier --check .  # Verifica a formatação no diretório atual
     - npx next build  # Constrói o projeto Next.js
   only:
@@ -25,6 +26,7 @@ build:
     paths:
       - miniprojetoantoniosousa/.next  # Armazena os arquivos de build para uso posterior
     expire_in: 1 week  # Opcional: define a duração de retenção dos artefatos
+
 
 # Job de deploy
 deploy:
