--- a/miniprojetoantoniosousa/package.json
+++ b/miniprojetoantoniosousa/package.json
@@ -21,6 +21,8 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
+    "@types/estree": "^1.0.6",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
