--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,17 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Gatilho para commits na branch principal
   pull_request:
     branches:
-      - main
+      - main  # Gatilho para PRs direcionados à branch principal
+  workflow_dispatch:  # Gatilho para execução manual, útil para webhooks do CMS
+  schedule:
+    - cron: '0 0 * * 1-5'  # Gatilho para execução às 00:00 de segunda a sexta-feira
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -23,7 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: miniprojetoantoniosousa  # Apenas o diretório do projeto Next.js
+        working-directory: miniprojetoantoniosousa
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
@@ -45,9 +47,9 @@ jobs:
           CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
 
   deploy:
-    needs: build  #  que o build conclua antes do deploy
+    needs: build
+    if: github.ref == 'refs/heads/main'  # Apenas executa o deploy na branch principal
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -59,7 +61,7 @@ jobs:
 
       - name: Deploy to Vercel
         run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
-        working-directory: miniprojetoantoniosousa  # Garantir que deploy use o mesmo caminho do 
+        working-directory: miniprojetoantoniosousa
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
